force-app/main/default/objects/PMT_Task__c/fields/Assigned_To_Email__c.field-meta.xml
<CustomField>
    <fullName>Assigned_To_Email__c</fullName>
    <formula>Assigned_To1__r.Email</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Assigned To Email</label>
    <type>Text</type>
</CustomField>