force-app/main/default/objects/PMT_Task__c/fields/Checklist_Selected__c.field-meta.xml
<CustomField>
    <fullName>Checklist_Selected__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Checklist Selected</label>
    <type>Checkbox</type>
</CustomField>