force-app/main/default/objects/PMT_Task__c/fields/Duration_In_Days__c.field-meta.xml
<CustomField>
    <fullName>Duration_In_Days__c</fullName>
    <label>Duration In Days</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>