force-app/main/default/objects/PMT_Task__c/fields/Is_Recurring__c.field-meta.xml
<CustomField>
    <fullName>Is_Recurring__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Recurring?</label>
    <type>Checkbox</type>
</CustomField>