force-app/main/default/objects/PMT_Task__c/fields/My_Task__c.field-meta.xml
<CustomField>
    <fullName>My_Task__c</fullName>
    <formula>IF(Assigned_To1__c = $User.Id , &quot;me&quot;, &quot;&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>My Task</label>
    <type>Text</type>
</CustomField>