force-app/main/default/objects/PMT_Task__c/fields/On_Hold_Reason__c.field-meta.xml
<CustomField>
    <fullName>On_Hold_Reason__c</fullName>
    <inlineHelpText>If blocked, why?</inlineHelpText>
    <label>On Hold Reason</label>
    <length>255</length>
    <type>Text</type>
</CustomField>