force-app/main/default/objects/PMT_Task__c/fields/Percentage_Completion__c.field-meta.xml
<CustomField>
    <fullName>Percentage_Completion__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Task Completion %</label>
    <precision>16</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>