force-app/main/default/objects/PMT_Task__c/fields/Phase_Name__c.field-meta.xml
<CustomField>
    <fullName>Phase_Name__c</fullName>
    <formula>Phase__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Phase Name</label>
    <type>Text</type>
</CustomField>