force-app/main/default/objects/PMT_Task__c/fields/Project_Id__c.field-meta.xml
<CustomField>
    <fullName>Project_Id__c</fullName>
    <formula>CASESAFEID(Phase__r.Project__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Project Id</label>
    <type>Text</type>
</CustomField>