force-app/main/default/objects/PMT_Task__c/fields/Status_Icon_Name__c.field-meta.xml
<CustomField>
    <fullName>Status_Icon_Name__c</fullName>
    <formula>IF(AND(Days_Late__c &gt;0,TEXT(Status__c) &lt;&gt; &quot;On Hold&quot;),&quot;utility:warning&quot;, 
IF( TEXT(Sign_off_status__c) = &quot;Approved&quot;, &quot;utility:approval&quot;, 
CASE( TEXT(Status__c) , 
&quot;Not Started&quot;, &quot;utility:routing_offline&quot;, 
&quot;In Progress&quot;, &quot;utility:clock&quot;, 
&quot;On Hold&quot;,&quot;utility:error&quot;, 
&quot;utility:success&quot;)))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Status Icon Name</label>
    <type>Text</type>
</CustomField>