force-app/main/default/objects/PMT_Task__c/fields/Task_Level_formula__c.field-meta.xml
<CustomField>
    <fullName>Task_Level_formula__c</fullName>
    <formula>Task_Level__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Task Level</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>