force-app/main/default/objects/PMT_Task__c/fields/Task_Name_w_Alert__c.field-meta.xml
<CustomField>
    <fullName>Task_Name_w_Alert__c</fullName>
    <formula>Status_Icon__c &amp;&quot; &quot;&amp; Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Task Name w. Alert</label>
    <type>Text</type>
</CustomField>