force-app/main/default/objects/PMT_Task__c/fields/Weighted_percentage__c.field-meta.xml
<CustomField>
    <fullName>Weighted_percentage__c</fullName>
    <formula>Duration__c *  Percentage_Completion__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Weighted %</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>