force-app/main/default/objects/PMT_Task__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Phase__c</columns>
    <columns>Percentage_Completion__c</columns>
    <columns>Assigned_To1__c</columns>
    <columns>Start_Date__c</columns>
    <columns>Due_Date__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>