force-app/main/default/objects/PMT_Task__c/listViews/All_Template_Tasks.listView-meta.xml
<ListView>
    <fullName>All_Template_Tasks</fullName>
    <columns>NAME</columns>
    <columns>Phase__c</columns>
    <columns>Percentage_Completion__c</columns>
    <columns>Assigned_To1__c</columns>
    <columns>Start_Date__c</columns>
    <columns>Due_Date__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>IsTemplate__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>All Template Tasks</label>
</ListView>